--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
 
 @layer components {
     .btn-primary {
-        @apply bg-primary text-white px-5 py-3 rounded-full hover:bg-primary/70 hover:text-on-dark transition-all duration-200 hover:cursor-pointer
+        @apply bg-primary text-white px-5 py-3 rounded-full hover:bg-primary/70 hover:text-on-dark transition-all duration-200 hover:cursor-pointer text-sm sm:text-base
     }
 
     .btn-rect {
